fix background picture stretch and hambuger

--- a/ckanext/teachcanada/assets/home.css
+++ b/ckanext/teachcanada/assets/home.css
@@ -1090,6 +1090,7 @@ button.active {
 .oval-img {
   width: 100%; 
   height: 100%;
+  object-fit: cover;
   border-radius:200px 200px 200px 200px;
 }
 
